force-app/main/default/objects/SAC_MaestroTemas__c/SAC_MaestroTemas__c.object-meta.xml
<CustomObject>
    <description>Objeto maestro parametrizable de temas de marcas sobre las reclamaciones</description>
    <label>Maestro Temas</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maestro Temas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>