force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_Activo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check para comprobar que el tema está activo</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>