force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_CorreoLetradoDT__c.field-meta.xml
<CustomField>
    <fullName>SAC_CorreoLetradoDT__c</fullName>
    <description>Campo para almacenar el correo que queremos que tenga el letrado DT (se utiliza para las alertas de consulta)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Correo letrado DT</label>
    <type>Email</type>
</CustomField>