force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Descripcion__c</fullName>
    <description>Descripción del Topic</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción</label>
    <length>250</length>
    <type>Text</type>
</CustomField>