force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_Dias__c.field-meta.xml
<CustomField>
    <fullName>SAC_Dias__c</fullName>
    <description>Campo para almacenar los días que deben pasar hasta que se lance el envío automático de la carta</description>
    <inlineHelpText>Días para el envío de la carta a contar desde la fecha de recepción de la reclamación</inlineHelpText>
    <label>Días</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>