force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_DocumentoVisible__c.field-meta.xml
<CustomField>
    <fullName>SAC_DocumentoVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo checkbox  para indicar si un tipo de documento será visible o no</description>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>