force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_GrupoLetrado__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoLetrado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para almacenar el grupo letrado asociado a una marca</description>
    <label>Grupo Letrado</label>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Maestro Temas (Grupo Letrado)</relationshipLabel>
    <relationshipName>Maestro_Temas1</relationshipName>
    <type>Lookup</type>
</CustomField>