force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_Oficina__c.field-meta.xml
<CustomField>
    <fullName>SAC_Oficina__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para tener el account (oficina) que va a ser de tipo DT</description>
    <label>Oficina</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Letrados DT</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank</value>
        </filterItems>
        <filterItems>
            <field>Account.CC_Tipo_Centro__c</field>
            <operation>equals</operation>
            <value>DT</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Maestro Temas</relationshipLabel>
    <relationshipName>Maestro_Temas</relationshipName>
    <type>Lookup</type>
</CustomField>