force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_OrdenPrelacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_OrdenPrelacion__c</fullName>
    <description>Campo único que asociado a una marca indica el orden de prelación de esta</description>
    <label>Orden</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>