force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_Plantilla__c.field-meta.xml
<CustomField>
    <fullName>SAC_Plantilla__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para almacenar la plantilla que debe tener la marca</description>
    <label>Plantilla</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Fast track</value>
        </filterItems>
        <filterItems>
            <field>SAC_PlantillaRedaccion__c.SAC_TipoPlantilla__c</field>
            <operation>equals</operation>
            <value>Fast track</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Envío automático carta</value>
        </filterItems>
        <filterItems>
            <field>SAC_PlantillaRedaccion__c.SAC_TipoPlantilla__c</field>
            <operation>equals</operation>
            <value>Carta automática</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SAC_PlantillaRedaccion__c</referenceTo>
    <relationshipLabel>Maestro Temas</relationshipLabel>
    <relationshipName>Maestro_Temas</relationshipName>
    <type>Lookup</type>
</CustomField>