force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_Seccion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Seccion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sección</label>
    <length>80</length>
    <type>Text</type>
</CustomField>