force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_TipoAuditoria__c.field-meta.xml
<CustomField>
    <fullName>SAC_TipoAuditoria__c</fullName>
    <description>Campo picklist que muestra el tipo de auditoría que tiene el punto de control</description>
    <label>Tipo auditoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_Altas</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>SAC_Subsanacion</fullName>
                <label>Subsanación</label>
            </value>
            <value>
                <fullName>SAC_Analisis</fullName>
                <label>Análisis</label>
            </value>
            <value>
                <fullName>SAC_Negociacion</fullName>
                <label>Negociación</label>
            </value>
            <value>
                <fullName>SAC_Resolucion</fullName>
                <label>Resolución</label>
            </value>
            <value>
                <fullName>SAC_Ejecucion</fullName>
                <label>Ejecución</label>
            </value>
            <value>
                <fullName>SAC_Derivacion</fullName>
                <label>Derivación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>