force-app/main/default/objects/SAC_MaestroTemas__c/fields/SAC_TipoFastTrack__c.field-meta.xml
<CustomField>
    <fullName>SAC_TipoFastTrack__c</fullName>
    <description>Campo picklist para elegir el tipo de fast track deseado</description>
    <label>Tipo fast track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_Completo</fullName>
                <default>true</default>
                <label>Completo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>