force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SAC_ControlAltas.recordType-meta.xml
<RecordType>
    <fullName>SAC_ControlAltas</fullName>
    <active>true</active>
    <description>Record Type para la creación de campos para el control de altas</description>
    <label>Control Altas</label>
</RecordType>