force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SAC_DespachoRepresentante.recordType-meta.xml
<RecordType>
    <fullName>SAC_DespachoRepresentante</fullName>
    <active>true</active>
    <description>Record Type utilizado para poder añadir valores de despacho representante</description>
    <label>Despacho representante</label>
</RecordType>