force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SAC_EnvioAutomaticoCarta.recordType-meta.xml
<RecordType>
    <fullName>SAC_EnvioAutomaticoCarta</fullName>
    <active>true</active>
    <description>Record Type para el envío automático de carta</description>
    <label>Envío automático carta</label>
</RecordType>