force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SAC_FastTrack.recordType-meta.xml
<RecordType>
    <fullName>SAC_FastTrack</fullName>
    <active>true</active>
    <description>Record type para proceso fast track</description>
    <label>Fast track</label>
</RecordType>