force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SAC_InformacionCualitativa.recordType-meta.xml
<RecordType>
    <fullName>SAC_InformacionCualitativa</fullName>
    <active>true</active>
    <label>Información cualitativa</label>
</RecordType>