force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SAC_LetradosDT.recordType-meta.xml
<RecordType>
    <fullName>SAC_LetradosDT</fullName>
    <active>true</active>
    <label>Letrados DT</label>
</RecordType>