force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SAC_MotivoDemora.recordType-meta.xml
<RecordType>
    <fullName>SAC_MotivoDemora</fullName>
    <active>true</active>
    <description>Record Type para la creación de motivos de demora en el maestro temas</description>
    <label>Motivo Demora</label>
</RecordType>