force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SAC_PuntoDeControl.recordType-meta.xml
<RecordType>
    <fullName>SAC_PuntoDeControl</fullName>
    <active>true</active>
    <description>Record type para los puntos de control que tendrá la auditoría</description>
    <label>Punto de control auditoría</label>
</RecordType>