force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SAC_Temas.recordType-meta.xml
<RecordType>
    <fullName>SAC_Temas</fullName>
    <active>true</active>
    <label>Marcas</label>
</RecordType>