force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SAC_TipoAdjuntos.recordType-meta.xml
<RecordType>
    <fullName>SAC_TipoAdjuntos</fullName>
    <active>true</active>
    <description>Record Type para la creación de tipos de documentos en el maestro temas</description>
    <label>Tipo Adjuntos</label>
</RecordType>