force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SPV_AnalisisAllanamiento.recordType-meta.xml
<RecordType>
    <fullName>SPV_AnalisisAllanamiento</fullName>
    <active>true</active>
    <description>Record type para registros que den valor a la picklist parametrizable del análisis de allanamiento de los escalados</description>
    <label>Análisis allanamiento/desistimiento</label>
</RecordType>