force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SPV_BlackListEmails.recordType-meta.xml
<RecordType>
    <fullName>SPV_BlackListEmails</fullName>
    <active>true</active>
    <description>Record Type para la creación de emails a los que se debe bloquear el envio desde Salesforce</description>
    <label>BlackList Emails SPV</label>
</RecordType>