force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SPV_InformacionCualitativa.recordType-meta.xml
<RecordType>
    <fullName>SPV_InformacionCualitativa</fullName>
    <active>true</active>
    <description>Record Type para la creación de registros de información cualitativa en Supervisores</description>
    <label>Información cualitativa SPV</label>
</RecordType>