force-app/main/default/objects/SAC_MaestroTemas__c/recordTypes/SPV_MotivoAllanamientoEscalado.recordType-meta.xml
<RecordType>
    <fullName>SPV_MotivoAllanamientoEscalado</fullName>
    <active>true</active>
    <description>Record type para registros que den valor a la picklist parametrizable del motivo de allanamiento de los escalados</description>
    <label>Motivo de allanamiento escalado</label>
</RecordType>