force-app/main/default/objects/SAC_MaestroTemas__c/validationRules/SAC_ValidarOrdenPrelacion.validationRule-meta.xml
<ValidationRule>
    <fullName>SAC_ValidarOrdenPrelacion</fullName>
    <active>true</active>
    <description>Validar que las marcas tienen el campo  orden de prelación informado</description>
    <errorConditionFormula>IF(RecordType.DeveloperName == &apos;SAC_Temas&apos; &amp;&amp; SAC_Activo__c = true  &amp;&amp; ISNULL(SAC_OrdenPrelacion__c), true, false)</errorConditionFormula>
    <errorMessage>Debe informar el orden de prelación de la marca si esta activa</errorMessage>
</ValidationRule>