force-app/main/default/objects/SAC_MaestroTemas__c/listViews/SAC_BlackListEmails.listView-meta.xml
<ListView>
    <fullName>SAC_BlackListEmails</fullName>
    <columns>NAME</columns>
    <columns>SAC_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_MaestroTemas__c.SAC_BlackListEmails</value>
    </filters>
    <label>BlackList Emails</label>
    <sharedTo>
        <role>SAC_General</role>
    </sharedTo>
</ListView>