force-app/main/default/objects/SAC_MaestroTemas__c/listViews/SAC_Despachos_representantes.listView-meta.xml
<ListView>
    <fullName>SAC_Despachos_representantes</fullName>
    <columns>NAME</columns>
    <columns>SAC_Descripcion__c</columns>
    <columns>SAC_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_MaestroTemas__c.SAC_DespachoRepresentante</value>
    </filters>
    <label>Despachos representantes</label>
    <sharedTo>
        <group>SAC_GrupoAdministradoresApp</group>
        <role>SAC_General</role>
    </sharedTo>
</ListView>