force-app/main/default/objects/SAC_MaestroTemas__c/listViews/SAC_Marcas.listView-meta.xml
<ListView>
    <fullName>SAC_Marcas</fullName>
    <columns>NAME</columns>
    <columns>SAC_Descripcion__c</columns>
    <columns>SAC_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_MaestroTemas__c.SAC_Temas</value>
    </filters>
    <label>Marcas</label>
</ListView>