force-app/main/default/objects/SAC_MaestroTemas__c/listViews/SAC_MarcasFastTrack.listView-meta.xml
<ListView>
    <fullName>SAC_MarcasFastTrack</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_MaestroTemas__c.SAC_FastTrack</value>
    </filters>
    <label>Marcas fast track</label>
    <sharedTo>
        <role>SAC_General</role>
    </sharedTo>
</ListView>