force-app/main/default/objects/SAC_MaestroTemas__c/listViews/SAC_MotivosDemora.listView-meta.xml
<ListView>
    <fullName>SAC_MotivosDemora</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_MaestroTemas__c.SAC_MotivoDemora</value>
    </filters>
    <label>Motivos Demora</label>
    <sharedTo>
        <role>SAC_General</role>
    </sharedTo>
</ListView>