force-app/main/default/objects/SAC_MaestroTemas__c/listViews/SAC_PuntosControlAuditoria.listView-meta.xml
<ListView>
    <fullName>SAC_PuntosControlAuditoria</fullName>
    <columns>NAME</columns>
    <columns>SAC_TipoAuditoria__c</columns>
    <columns>SAC_Critico__c</columns>
    <columns>SAC_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_MaestroTemas__c.SAC_PuntoDeControl</value>
    </filters>
    <label>Puntos de control auditoría</label>
    <sharedTo>
        <role>SAC_General</role>
    </sharedTo>
</ListView>