force-app/main/default/objects/SAC_MaestroTemas__c/listViews/SPV_BlackList_Emails.listView-meta.xml
<ListView>
    <fullName>SPV_BlackList_Emails</fullName>
    <columns>NAME</columns>
    <columns>SAC_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_MaestroTemas__c.SPV_BlackListEmails</value>
    </filters>
    <label>SPV - BlackList Emails</label>
    <sharedTo>
        <role>SPV_General</role>
    </sharedTo>
</ListView>