force-app/main/default/objects/SAC_MaestroTemas__c/listViews/SPV_InformacionCualitativa.listView-meta.xml
<ListView>
    <fullName>SPV_InformacionCualitativa</fullName>
    <columns>NAME</columns>
    <columns>SAC_Seccion__c</columns>
    <columns>SAC_Descripcion__c</columns>
    <columns>SAC_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_MaestroTemas__c.SPV_InformacionCualitativa</value>
    </filters>
    <label>SPV - Información cualitativa</label>
</ListView>