force-app/main/default/objects/SAC_MaestroTemas__c/listViews/SPV_MotivoAllanamientoEscalado.listView-meta.xml
<ListView>
    <fullName>SPV_MotivoAllanamientoEscalado</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SAC_MaestroTemas__c.SPV_MotivoAllanamientoEscalado</value>
    </filters>
    <label>Motivo allanamiento escalado</label>
    <sharedTo>
        <role>SPV_General</role>
    </sharedTo>
</ListView>